Updated wording in 4.2

--- a/Ongoing report/OngoingReport 1.0.tex
+++ b/Ongoing report/OngoingReport 1.0.tex
@@ -248,7 +248,7 @@ A final big limitation of this research has to do with one of the cashflows bein
 \subsection{Maintenance of the site} \label{ss:maint}
 
 %ONGOING: shafiee bits (changed)
-Compared to the topic of installation, there is a large body of research done in the area of operation and maintenance (O\&M) of offshore wind farms. This research looks at various aspects and timescales relevant to the OWFs. In \cite{shafiee2015maintenance} the research and topics are divided into three timescales (echelons):
+Compared to the topic of installation, there is a large body of diverse research done in the area of operation and maintenance (O\&M) of offshore wind farms. This research looks at various aspects and timescales relevant to the OWFs. In \cite{shafiee2015maintenance} the research and topics are divided into three timescales (echelons):
 
 \begin{enumerate}
 \item Strategic: Long term, over the lifespan of an OWF
@@ -274,38 +274,29 @@ Compared to the topic of installation, there is a large body of research done in
 
 Decisions within the strategic echelon are found to have the biggest impact on the costs of operations, which makes sense as they affect the largest amount of time. However each of these echelons include important decisions that will have to be made for the maintenance of the sites. Besides providing this framework to categorize research, they also highlight which areas appear most thoroughly researched, and identify some unexplored areas. Potentially due to their large impact, the topics within the strategic echelon have received most attention, while the topics in the operational echelon received least. The writers indicate they these shorter term areas might hold unexplored potential for future research. Additionally some related topics that might improve help in related maintenance logistics are discussed, such as the creation of a database with scenarios and case studies.
 
-%\bigskip
-%ONGOING: Removed
-%One aspect to consider is fleet size. In \cite{staalhane2019optimizing} a two-stage stochastic programming model is used to first determine which vessels to charter, and then how to use the cartered vessels. In their computational study this approach is compared to several life-cycle cost estimating simulation models from the literature, and it is found to give reasonable estimates on the resulting costs. Additionally it is shown to require relatively low computational power, and can therefore be used to support maintenance decisions made. 
-
-\bigskip
-
-%TODO: Remove
-With the large amount of research done, and the variety of subjects within this field, I have yet to read much more about the current state of most subjects. This will be my immediate focus from here on, as described in more detail in \Cref{s:concl}.
-
 \bigskip
 
 %ONGOING: Dinwoodie paragraph
-In \cite{dinwoodie2012analysis} an attempt is made to analyse the availability of OWFs. It is observed that the availability of offshore farms is much lower than that of onshore farms; currently offshore availability is around 80\%, while onshore this is 97\%. Various future scenarios are simulated to investigate which measures are likely to improve availability. It is found that increasing vessel operability to allow a higher significant wave height will greatly increase availablity, but it will still be significantly lower than the onshore availibility. It is posited this can only be improved with improvement of the components to lower their failure rates, but an 8-fold improvement is required to achieve the same level of availability as onshore. 
+In \cite{dinwoodie2012analysis} an attempt is made to analyse the availability of OWFs. It is observed that the availability of offshore farms is much lower than that of onshore farms; currently offshore availability is around 80\%, while onshore this is 97\%. Various future scenarios are simulated to investigate which measures are likely to improve availability. It is found that increasing vessel operability to allow a higher significant wave height will greatly increase availablity, but realistically it will remain significantly below onshore availability. It is posited this can only be improved with improvement of the components to lower their failure rates, but an 8-fold improvement is required to achieve the same level of availability as onshore. 
 
-The weather model used in this research is an auto-regressive model broadly used in the literature, and is likely similar to what will be used for my reserach. The failure model is similar to those used on onshore farms, as there is a lack of available offshore data. While these models seem sufficient, the research is based on a number of big assumptions. For example, it is assumed that a failure will be repaired during the next available weather period. This does not seem to take into consideration the significant lead-up time before a vessel can be at the site to perform the repair, nor does it consider different operational strategies to handle maintenance. 
+The weather model used in this research is an auto-regressive model used in other parts of the literature too, and is likely similar to what will be used for my reserach. The failure model is similar to those used on onshore farms, as there is a lack of available offshore data. While these models seem sufficient, the research is based on a number of big assumptions. For example, it is assumed that a failure will be repaired during the next available weather period. This does not seem to take into consideration the significant lead-up time before a vessel can be at the site to perform the repair, nor does it consider different operational strategies to handle maintenance. 
 
-This point especially seems strange, as in another paper \cite{dinwoodie2014operational} the same researchers focus on comparing operational strategies. They consider 4 types: 
+This point especially seems strange, as in another paper \cite{dinwoodie2014operational} the same researchers focus on comparing operational strategies. They consider 4 approaches: 
 
 \begin{itemize}
 \item Annual charter, where maintenance operations take place at predetermined times
 \item Fix on fail, where repairs are made as soon as any failures are detected
-\item Batch repair, where repairs are done after a set number of failures is detected
+\item Batch repair, where repairs are done after a fixed number of failures is detected
 \item Purchase, where a vessel is purchased rather than rented
 \end{itemize}
 
-It is found that the latter three strategies are all close in costs, and which performs better depends on scenario specifics such as fluctuations in vessel costs, the value of energy, and specific failure rates. Each of the strategies also has inherent characteristics that the operator might have preferences in, such as the purchase strategy having much higher costs up front, but lower operational costs. 
+In their research they find the latter three strategies to be close together in costs, and which performs better depends on scenario specifics such as fluctuations in vessel costs, the value of energy, and specific failure rates. Each of the strategies also has inherent characteristics that the operator might have preferences in, such as the purchase strategy having much higher costs up front, but lower operational costs. 
 
-Like the previous paper discussed, this research is also lacking in crucial areas. It is clear to see the feasibility of the batch repair strategy depends on the batch size chosen, and no mention is given on how this is determined. A similar issue arises with he purchase strategy, which is not a complete strategy in itself since after purchasing a vessel there is still a choice on when to deploy it (predetermined times, after every failure, or after a batch of failures). This too is not discussed, even though related details such as potentially renting out a purchased vessel to improve this strategy are speculated about. Another issue is that mixing of strategies is only very briefly discussed, while this intuitively seems like it might be beneficial. For example, in batch repair, if the batch size is set to 5 failures and for an extended period of time there are 4 failures, it might be beneficial to repair it if this situation goes on for long enough. One way to do this is to mix the annual charter strategy with the batch repair strategy, having a set time to do maintenance even if the required number of failures is not reached. 
+Like the previous paper discussed, this research is also based on some strong assumptions. It is clear to see the feasibility of the batch repair strategy depends on the batch size chosen, and no mention is given on how this is determined. A similar issue arises with the purchase strategy, which is not a complete strategy in itself since after purchasing a vessel there is still a choice on when to deploy it (predetermined times, after every failure, or after a batch of failures), as there will still be significant operating costs. This too is not discussed, even though related details such as potentially renting out a purchased vessel to improve this strategy are speculated about. Another issue is that mixing of strategies is only very briefly discussed, while this intuitively seems like it might be beneficial. For example, in batch repair, if the batch size is set to 5 failures and for an extended period of time there are 4 failures, it might be beneficial to repair it if this situation goes on for long enough. One way to do this is to mix the annual charter strategy with the batch repair strategy, having a set time to do maintenance even if the required number of failures is not reached. This mix of preventive and corrective maintenance is actually commonly discussed in the literature, so it is strange absent here. 
 
-In conclusion, these strategies are something I need to consider in my research, and while the research presented here is a useful foundation, significantly more research needs to be done into these operational strategies. 
+In conclusion, these strategies are something anyone simulating or optimizing maintenance will have to consider, which includes me in my research. While the research presented here is a useful foundation, significantly more research needs to be done into these operational strategies. 
 
-In \cite{dinwoodie2015reference} this group of researchers proposes a reference case for maintenance models. Their idea is for various maintenance models to optimise a constructed scenario a fictional windfarm, as a benchmark to compare these models. This allows us to see which models perform better in various scenarios, as they constructed a base case and a set of variants. In the paper they compare four models, and compare various metrics of the results. For availability of the windfarms all results are extremely close, apart from three scenarios. It is explained that this is due to previously unknown assumptions in the different models, such as weather parallel maintenance tasks are possible on the same turbine, and the moment at which tasks should be assigned to vessels. 
+In \cite{dinwoodie2015reference} this same group of researchers proposes a reference case for maintenance models. Their idea is for various maintenance models to optimise a constructed scenario a fictional windfarm, as a benchmark to compare these models. This allows us to see which models perform better in various scenarios, as they constructed a base case and a set of variants. In the paper they compare four models, and compare various metrics of the results. For availability of the windfarms all results are extremely close, apart from three scenarios. It is explained that these differences result from previously unknown assumptions in the different models, such as whether  parallel maintenance tasks are possible on the same turbine, and the moment at which tasks should be assigned to vessels. 
 
 This uncovering of assumptions is another benefit of using a standardised reference case to verify a model. Seeing that a new model performs similarly to other models apart from certain scenarios can give insight into how this new model handles these scenarios in ways that might otherwise have gone unnoticed, as demonstrated in this paper. However it also comes with certain drawbacks. In order to properly handle these scenarios some of the models needed to be adjusted, hence a new model which is planned to be verified through this method might limit itself to be able to handle these scenarios. Therefore there is a risk for model space to be restricted in known and unknown ways if they are expected to be benchmarked by a technique like this, as they will have to take in this specific data as input. 
 
@@ -314,17 +305,17 @@ That said, this benchmarking technique still seems promising to compare differen
 \bigskip
 
 %ONGOING: Besnard
-In \cite{besnard2011stochastic} an optimisation model is constructed for short-term maintenance planning. The primary goal is to use moments where energy production is expected to be low for maintenance, to minimise production losses. An interesting aspect of this model is the build-in uncertainty of weather forecasts. The researchers have modeled this uncertainty by having a set of scenarios, and they minimise the average cost over all scenarios. The first time step is assumed to have the correct forecast, hence the idea behind the model is for the optimisation to be recomputed regularly. A rolling horizon approach such as this seems like a good method to deal with these uncertain forecasts, although it is computationally expensive to recalculate regularly. 
+In \cite{besnard2011stochastic} a stochasitc optimisation model is constructed for short-term maintenance planning. The primary goal is to utilize times when energy production is expected to be low for maintenance, in order to minimise production losses. An interesting aspect of this model is the build-in uncertainty of weather forecasts. The stochastic element of their model is realized by having a set of scenarios, and the average cost over all scenarios is minimised. The first time step is assumed to have the correct forecast, hence the idea behind the model is for the optimisation to be recomputed regularly. A rolling horizon approach such as this seems like a good method to deal with these uncertain forecasts, although it can be computationally expensive to recalculate regularly. 
 
 \bigskip
 
 %ONGOING: Marigaud
-Research regarding Condition-Based Maintenance is summarized in \cite{merigaud2016condition}. This work talks in-depth about many systems available to monitor the health and potential failure rate of many components, which all operate on different levels. It includes research on Tidal Turbines and Wave Energy Converters, but focuses on Wind Turbines. Since it does not talk (much) about logistics, and more about monitoring at an engineering and design level, not much of this work applies to my research, but it is a potential resource to look at if my results indicate that improved condition-tracking is useful or necessary. 
+A summary of research regarding Condition-Based Maintenance is given in \cite{merigaud2016condition}. This work talks in-depth about many systems available to monitor the health and potential failure rate of many components, which all operate on different levels. For example, some might simply monitor the energy output of a turbine to detect faults in any of its components, while a different system might specifically monitor the component that transforms rotational energy to electrical energy. It includes research on Tidal Turbines and Wave Energy Converters, but focuses on Wind Turbines. Since it does not talk (much) about logistics, and more about monitoring at an engineering and design level, not much of this work applies to my research, but it is a potential resource to look at if my results indicate that improved condition-tracking is useful or necessary. 
 
 \bigskip
 
 %ONGOING: Stalhane
-In \cite{staalhane2019optimizing} the problem of fleet composition is investigated through a two-stage stochastic programming model. The problem is decomposed using a variant of a Dantzig-Wolfe decomposition. In the first stage a set of vessels is decided to be chartered for each active base. In the second stage the maintenance tasks are divided over the available vessels. The first stage has an objective function minimising costs, which as one term representing the expected costs from the second stage. This cost depends on the stochastic variables in the second stage (failures, energy generated based on weather conditions, availability of vessels based on weather conditions). In order to solve it, a set of scenarios are generated, each of which represent a realisation of this set of variables. The weighted average costs of all scenarios (weighted on their probability) is used to represent the expected costs, after which the first stage of the problem can be solved. 
+In \cite{staalhane2019optimizing} the problem of fleet composition is investigated through a two-stage stochastic programming model. The problem is decomposed using a variant of a Dantzig-Wolfe decomposition. In the first stage the set of vessels to be chartered for each active base is decided. In the second stage the maintenance tasks are divided over the available vessels. The first stage has an objective function minimising costs, which has one term representing the expected costs from the second stage. This cost depends on the stochastic variables in the second stage (failures, energy generated based on weather conditions, availability of vessels based on weather conditions). In order to solve it, a set of scenarios is generated, each of which represent a realisation of this set of variables. The weighted average costs of all scenarios (weighted on their probability) is used to represent the expected costs, after which the first stage of the problem can be solved. 
 
 This sort of decomposition is potentially useful for my models, to handle the stochastic aspects of the problem. In this paper, the model is verified by comparing it to cases constructed in \cite{dinwoodie2015reference}. It is shown to run in feasible time, and when the fleet composition is fixed it is shown to give comparable results to what is expected. Then some adjustments to the given cases are made, to see what impacts they have to the solutions produced. Overall this approach seems promising to help make logistical decisions about the maintenance. 
 
@@ -344,7 +335,7 @@ In \cite{barlow2017using}, the final paper (so far) on this tool, the researcher
 %TODO: Check these texts and references
 In a very recent work \cite{leontaris2019decision}, researchers have looked into reducing the risk of supply disruptions. Due to the absence of sufficient historical data, they use expert judgement to analyse the risk of supply disruptions, using different weights to combine judgements from various experts. It was found that the combined judgement lead to a better outcome than any individual judgement. In general it was found that not taking the estimations of supply disruptions into account could lead to significant overruns in both schedule and budget. 
 
-%CHECKED
+%ONGOING: CHECKED
 The same authors have written about whether dependencies between task duration \cite{leontaris2018probabilistic} should be considered. They use a non-parametric Bayesian Network to model dependant delays in task duration, so that if a vessel has a delay on a certain task, the task it performs afterwards has a higher chance to be delayed as well. So far they have only tested this technique with the main tasks for installation, but this technique could be used throughout all operations. The initial results show that using constant task duration (based on the mode of historical durations) underestimates the duration, and with it costs of the installation. The reverse seems to happen when the durations are stochastic (using a triangular distribution); the increased variability seems to overestimate the durations. The proposed approach is shown to be a more realistic way to model this. 
 
 In another paper \cite{leontaris2016probabilistic} the same authors attempt to generate synthethic weather series, where the different metrics (wave height, wind speed, and potentially more like wave period and wind direction) are dependent on each other. For this they use copulas, which join multivariate distribution functions. They test their method with a project for laying the cables of an OWF. Their initial results show that this method could provide more insights into the realistic durations of offshore projects. 
