--- a/Ongoing report/mybib.bib
+++ b/Ongoing report/mybib.bib
@@ -450,3 +450,13 @@
   year={2015},
   publisher={SAGE Publications Sage UK: London, England}
 }
+
+@article{barlow2015exploring,
+  title={Exploring the impact of innovative developments to the installation process for an offshore wind farm},
+  author={Barlow, Euan and {\"O}zt{\"u}rk, Diclehan Tezcaner and Revie, Matthew and Boulougouris, Evangelos and Day, Alexander H and Akartunal{\i}, Kerem},
+  journal={Ocean Engineering},
+  volume={109},
+  pages={623--634},
+  year={2015},
+  publisher={Elsevier}
+}
